# litellm-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yml  spec.yaml
.github/workflows/: audit.yml  general.yml
.sqlx/: query-04d4af613b8946a7b070fa43441354260bfe9e3b1e80a15e5f5921f39e460425.json  query-0643fb49da19a74f9b579928d5384db2bdcb2e5360edcc41f1e2c7347af07316.json  query-0d2eb9605bbe8b9a648b13cfb6ef18b3356137f88c048055806c2fb75fb89a62.json  query-1d9e4d5c1e666758fdf85f5e7267c36614005a7d486bf2f529d02f2e079d8acb.json  query-1db908bd696f7af465a346bb81381a6cf76a4cd89c2d821a299d2254d44a3386.json  query-2dbc97a6d4624aaa06848ae5fbbc7bf758f8a0ac4d328309bf24041e29f3ad01.json  query-5d1f0d71b541233c8eada26b96da401f998ca233cdca35d2bba7953aef176d2a.json  query-61caba1eed7c3e4baac8d1de914f5aeefcb11d521dbd638bbe41939a4fc3f3c3.json  query-65f2f30d60a84b759dec85d5639fa258391382fe1f3705a9c652f74c615bcff4.json  query-6e7c5623458a954371a4d0bf3e326018d455892b5e06cf29d821a7d2a2bfd8e6.json  query-71dbcfa61387db9535d1d7c68063759db7cc5ac542a5edee5dd726e39d5fe6bc.json  query-7326d932710f677f5281088fe3dd2eb75bcaa2e467e68eaa380b77b941ca5aa7.json  query-74230973e5d094c9e24e1d468920e32a8eb302d5741db0831193ede37be3289e.json  query-7c35841a2749870d78e093302a218c75a0e311cea527cb6377f8e64e256ff2c6.json  query-8dc5b37b63d7f3548528cb1234e8c2e242ba5c8520f7b48443e2ef17b22b4d44.json  query-9284e4198edeef486f2be458159b696306c7f737571755bba84b76a456f8806e.json  query-99a823e0edfb7a5d43f9e82fe9d60ecafdedfe0d3989a85eade0081bf86e173b.json  query-9f95e9e88c7fa75f85d607d71261b6c017a2607b31bedc38311e9f18b1c466f3.json  query-9ff4114f0a2df59d94e598adb749a5e913b97d9d1f70720a87eaec69ebed38a8.json  query-a0378e5e926f3e833abdd46d635e77247bfafebdbbdfe46a107fbcf3d99bf8e1.json  query-a384248d6d34d19408be350e0d761c76b72fb176181ac3c970130f6aa6d14e1f.json  query-a49f0472f6f9e933554986b7ddc4b7f73303ff2b0acbe91f52a2e9e6d00e1178.json  query-af279c76c6f5720ef575b706a19080746ac6e06b674612705d7070613926ce8c.json  query-c01982aea74d9dd74b5ab67c611c8917fecee65b4c58e2feb4549bc0c482fa0b.json  query-cdc137326e4d355f7690aca5aa7014166557557d44890027f28d150244216d19.json  query-d0d73e12d28d5728cac9b86f063e2f9772496722921e164bf10d3a31b4012b76.json  query-d0ef58732d0a9436aaeb3a4a55a8b282d0122a1fee59fe6816a90766dc352dff.json  query-e80ecf98683558995c567141289e321ccda5af009e994f1a15a742f73693ed4b.json  query-efd9ae91ec19c2b3bc0a539793b7d2aee22faf254feafcb001664f0d249b5a6e.json  query-f9211a0a8c0f53db0bd97b98c05e60d0c406f5d4ba5d0a68521865fdbbe90f58.json  query-ffa8f6102132ad5bfa65d5a70513aae4a822a4f3b7654f02eb607505c3b3ffc8.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20250422000001_users.sql  20250422000002_provider_keys.sql  20250422000003_virtual_keys.sql  20250422000004_usage_logs.sql  20250422000005_budget_counters.sql  20250422000006_request_logs.sql  20250422000007_response_cache.sql  20250422000008_approved_emails.sql  20250422000009_audit_log.sql
scripts/: init_db.sh  pre-commit  setup-hooks.sh
src/: app.rs  configuration.rs  db.rs  error.rs  lib.rs  main.rs
src/audit/: mod.rs
src/auth/: mod.rs  password.rs  session.rs  validation.rs
src/components/: delete_modal.rs  mod.rs
src/keys/: approved_emails.rs  mod.rs  provider_keys.rs  virtual_keys.rs
src/pages/: mod.rs
src/pages/audit/: mod.rs
src/pages/dashboard/: mod.rs
src/pages/keys/: mod.rs
src/pages/login/: mod.rs
src/pages/request_token/: mod.rs
src/pages/settings/: mod.rs
src/pages/usage/: mod.rs
src/proxy/: budget.rs  chat_completions.rs  client.rs  completions.rs  embeddings.rs  mod.rs  models.rs  rate_limit.rs  responses.rs  token_counter.rs  types.rs  usage.rs
src/routes/: health_check.rs  mod.rs
style/: main.scss
