[package]
name = "litellm-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8" }
leptos_router = { version = "0.8" }
axum = { version = "0.8", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
leptos_axum = { version = "0.8", optional = true }
leptos_meta = { version = "0.8" }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
wasm-bindgen = { version = "0.2.106", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "uuid", "chrono", "tls-rustls", "rust_decimal"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = { version = "0.15", default-features = false, features = ["yaml"], optional = true }
serde-aux = { version = "4", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"], optional = true }
tracing-bunyan-formatter = { version = "0.3", optional = true }
tracing-log = { version = "0.2", optional = true }
tower-http = { version = "0.6", features = ["trace", "request-id", "util"], optional = true }
tower = { version = "0.5", optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"], optional = true }
secrecy = { version = "0.8", features = ["serde"], optional = true }
utoipa = { version = "5", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "9", features = ["axum"], optional = true }
dotenvy = { version = "0.15", optional = true }
tower-sessions = { version = "0.14", optional = true }
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"], optional = true }
argon2 = { version = "0.5", optional = true }
aes-gcm = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
rand = { version = "0.8", optional = true }
tokio-stream = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
sha2 = { version = "0.10", optional = true }
rust_decimal = { version = "1", features = ["serde-str"], optional = true }
js-sys = { version = "0.3", optional = true }

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:js-sys",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "dep:sqlx",
    "dep:config",
    "dep:serde-aux",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:tracing-bunyan-formatter",
    "dep:tracing-log",
    "dep:tower-http",
    "dep:tower",
    "dep:uuid",
    "dep:chrono",
    "dep:secrecy",
    "dep:utoipa",
    "dep:utoipa-swagger-ui",
    "dep:dotenvy",
    "dep:tower-sessions",
    "dep:tower-sessions-sqlx-store",
    "dep:reqwest",
    "dep:argon2",
    "dep:aes-gcm",
    "dep:hex",
    "dep:rand",
    "dep:tokio-stream",
    "dep:futures",
    "dep:sha2",
    "dep:rust_decimal",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[dev-dependencies]
reqwest = "0.12"
tokio = { version = "1", features = ["rt", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate"] }
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
chrono = "0.4"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
bin-target = "litellm-rs"
output-name = "litellm-rs"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"
site-addr = "0.0.0.0:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
